--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -106,3 +106,8 @@
     {% endblock %}
 </div>
 {% endblock %}
+
+{% block scripts %}
+    {{ super() }}
+    {{ moment.include_moment() }}
+{% endblock %}
