--- a/app/templates/addEdit.html
+++ b/app/templates/addEdit.html
@@ -1,5 +1,5 @@
 {% import "bootstrap/wtf.html" as wtf %}
-{% import "macros.html" as macros %}
+{% from "macros.html" import breadcrumb with context %}
 
 {% extends "base.html" %}
 
@@ -9,7 +9,7 @@
 
 {% block page_content %}
 {% if breadcrumbs %}
-    {{ macros.breadcrumb(breadcrumbs) }}
+    {{ breadcrumb(breadcrumbs) }}
 {% endif %}
 <div class = "page-header">
     <h1>{{ operation }} <small>{{ modelName }}</small></h1>
@@ -26,7 +26,7 @@
         {
             $(".form-control").first().focus()
             $("#submit").hide()
-            $("#submit").parent().append("<button class = \"btn btn-default\" title = \"Save\" type = \"submit\">" +
+            $("#submit").parent().append("<button class = \"btn btn-default\" id = \"buttonSave\" title = \"Save\" type = \"submit\">" +
                 "<span class = \"glyphicon glyphicon-floppy-disk\" aria-hidden = \"true\"></span></button>")
         })
     </script>
