--- a/app/templates/elements/dashboard.html
+++ b/app/templates/elements/dashboard.html
@@ -52,7 +52,7 @@
                     <td>{{ elementAttribute.ElementAttributeTemplate.Name }}</td>
                     {% if elementAttribute.Tag.TagValues[0] %}
                         {% set firstTagValue = elementAttribute.Tag.TagValues | sort(attribute = "Timestamp", reverse = True) | first %}
-                        <td id = "tdLastTimestamp{{ elementAttribute.Tag.TagId }}">{{ firstTagValue.Timestamp }}</td>
+                        <td id = "tdLastTimestamp{{ elementAttribute.Tag.TagId }}">{{ moment(firstTagValue.Timestamp).format("YYYY-MM-DD HH:mm:ss") }}</td>
                         {% if elementAttribute.Tag.LookupId %}
                             <td id = "tdLastValue{{ elementAttribute.Tag.TagId }}">{{ elementAttribute.Tag.Lookup.LookupValues | 
                                     selectattr("Value", "equalto", firstTagValue.Value) | map(attribute = "Name") | list | first }}          
@@ -68,20 +68,20 @@
                     {% endif %}
                     <td>
                         <div class = "form-group" id = "divNewValue{{ elementAttribute.Tag.TagId }}">
-                        {% if elementAttribute.Tag.LookupId %}
-                            <select class = "form-control" id = "inputOrSelectNewValue{{ elementAttribute.Tag.TagId }}">
-                                <option value = "-1"></option>
-                                {% for lookupValue in elementAttribute.Tag.Lookup.LookupValues %}
-                                    {% if lookupValue.Selectable %}
-                                        <option value = "{{ lookupValue.Value }}">{{ lookupValue.Name}}</option>
-                                    {% endif %}
-                                {% endfor %}
-                            </select>
-                            <p class = "help-block" id = "pNewValue{{ elementAttribute.Tag.TagId }}"></p>
-                        {% else %}
-                            <input class = "form-control" id = "inputOrSelectNewValue{{ elementAttribute.Tag.TagId }}" value = "">
-                            <p class = "help-block" id = "pNewValue{{ elementAttribute.Tag.TagId }}"></p>
-                        {% endif %}
+                            {% if elementAttribute.Tag.LookupId %}
+                                <select class = "form-control" id = "inputOrSelectNewValue{{ elementAttribute.Tag.TagId }}">
+                                    <option value = "-1"></option>
+                                    {% for lookupValue in elementAttribute.Tag.Lookup.LookupValues %}
+                                        {% if lookupValue.Selectable %}
+                                            <option value = "{{ lookupValue.Value }}">{{ lookupValue.Name}}</option>
+                                        {% endif %}
+                                    {% endfor %}
+                                </select>
+                                <p class = "help-block" id = "pNewValue{{ elementAttribute.Tag.TagId }}"></p>
+                            {% else %}
+                                <input class = "form-control" id = "inputOrSelectNewValue{{ elementAttribute.Tag.TagId }}" value = "">
+                                <p class = "help-block" id = "pNewValue{{ elementAttribute.Tag.TagId }}"></p>
+                            {% endif %}
                         </div>
                     </td>
                     <td>
@@ -123,13 +123,15 @@
     <link rel = "stylesheet" type = "text/css" href = {{ url_for("static", filename = "css/datatables.min.css") }}/>
     <link rel = "stylesheet" type = "text/css" href = {{ url_for("static", filename = "css/styles.css") }}/>
     <script type = "text/javascript" src = {{ url_for("static", filename = "js/datatables.min.js") }}></script>
-    <script type = "text/javascript" src = {{ url_for("static", filename = "js/moment.min.js") }}></script>
     <script>
-        $(document).ready(function() {
+        $(document).ready(function()
+        {
             // Update the focus and tabindex upon an order event.
-            var orderEvent = function(type) {
+            var orderEvent = function(type)
+            {
                 var tabIndex = 1
-                $("[id^=divNewValue]").each(function() {
+                $("[id^=divNewValue]").each(function()
+                {
                     var id = $(this).attr("id").split("divNewValue")[1]
                     $("#inputOrSelectNewValue" + id).attr("tabindex", tabIndex)
                     if (tabIndex == 1)
@@ -142,138 +144,147 @@
                 $("#buttonAttributesSaveAll").attr("tabindex", tabIndex)
             }
 
-            var attributesTable = $("#attributesTable")
-                .on("order.dt", function() {
-                    orderEvent()
-                })
-                .DataTable({
-                    fixedHeader: {
-                        header: true,
-                        footer: false
-                    },
-                    "order":
-                    [
-                        [1, "asc"]              // Attribute.
-                    ],
-                    "columns":
-                    [
-                        { "orderable": false }, // Attribute values button.
-                        null,
-                        null,
-                        null,
-                        { "orderable": false }, // Unit.
-                        { "orderable": false }, // New value.
-                        { "orderable": false }, // New timestamp.
-                        { "orderable": false }, // Save all button.
-                        { "orderable": false }, // List attribute value notes button.
-                        { "orderable": false }, // Edit attribute value button.
-                        { "orderable": false }  // Delete attribute value button.
-                    ],
-                    "stateSave": true,
-                    "stateDuration": 0,
-                    "pageLength": 25
-                })
+            var attributesTable = $("#attributesTable").on("order.dt", function()
+            {
+                orderEvent()
+            })
+            .DataTable(
+            {
+                fixedHeader: {
+                    header: true,
+                    footer: false
+                },
+                "order":
+                [
+                    [1, "asc"]              // Attribute.
+                ],
+                "columns":
+                [
+                    { "orderable": false }, // Attribute values button.
+                    null,
+                    null,
+                    null,
+                    { "orderable": false }, // Unit.
+                    { "orderable": false }, // New value.
+                    { "orderable": false }, // New timestamp.
+                    { "orderable": false }, // Save all button.
+                    { "orderable": false }, // List attribute value notes button.
+                    { "orderable": false }, // Edit attribute value button.
+                    { "orderable": false }  // Delete attribute value button.
+                ],
+                "stateSave": true,
+                "stateDuration": 0,
+                "pageLength": 25
+            })
 
             // Update the timestamp for input or select new values appropriately.
-            $("[id^=inputOrSelectNewValue]").blur(function() {
-                var value = $.trim($(this).val())
+            $("[id^=inputOrSelectNewValue]").blur(function()
+            {
+                var newValue = $.trim($(this).val())
                 var id = $(this).attr("id").split("inputOrSelectNewValue")[1]
-                if ($(this).is("input") && value == "" || $(this).is("select") && value == "-1")
+                if ($(this).is("input") && newValue == "" || $(this).is("select") && newValue == "-1")
                 {
                     $("#inputNewTimestamp" + id).val("")
                 }
                 else
                 {
-                    var timestamp = new moment().local().format("YYYY-MM-DD HH:mm:ss")
-                    $("#inputNewTimestamp" + id).val(timestamp)
+                    var timestamp = new moment()
+                    $("#inputNewTimestamp" + id).val(timestamp.local().format("YYYY-MM-DD HH:mm:ss"))
                 }
             })
 
             // Enter key call save all.
-            $(document).keypress(function(event) {
+            $(document).keypress(function(event)
+            {
                 if (event.which == 13)
                 {
                     $("#buttonAttributesSaveAll").focus()
                 }
             })
 
-            $("#buttonAttributesSaveAll").click(function() {
+            $("#buttonAttributesSaveAll").click(function()
+            {
                 var error = false
                 var rows = []
 
                 // Loop through the new input or select values and check for validation errors.
-                attributesTable.$("[id^=inputOrSelectNewValue]").each(function() {
+                attributesTable.$("[id^=inputOrSelectNewValue]").each(function()
+                {
                     var id = $(this).attr("id").split("inputOrSelectNewValue")[1]
-                    var value = $.trim($(this).val())
-                    var valueIsBlank = true
-                    var valueIsValid = $.isNumeric(value)
-                    var timestamp = $.trim($("#inputNewTimestamp" + id).val())
-                    var timestampIsBlank = timestamp == ""
-                    var timestampIsValid = moment(timestamp, "YYYY-M-D H:m:s", true).isValid()
+                    var newValue = $.trim($(this).val())
+                    var newValueIsBlank = true
+                    var newValueIsValid = $.isNumeric(newValue)
+                    var newTimestamp = $.trim($("#inputNewTimestamp" + id).val())
+                    var newTimestampIsBlank = newTimestamp == ""
+                    var newTimestampIsValid = moment(newTimestamp, "YYYY-M-D H:m:s").isValid()
                     
                     if ($(this).is("input"))
                     {
-                        valueIsBlank = value == ""
+                        newValueIsBlank = newValue == ""
                     }
                     else if ($(this).is("select"))
                     {
-                        valueIsBlank = value == "-1"
+                        newValueIsBlank = newValue == "-1"
                     }
 
-                    if (valueIsBlank && timestampIsBlank)
+                    if (newValueIsBlank && newTimestampIsBlank)
                     {
                         $("#divNewValue" + id).removeClass("has-error")
-                        var helpBlock = $("#pNewValue" + id).html("")
+                        $("#pNewValue" + id).html("")
                         $("#divNewTimestamp" + id).removeClass("has-error")
-                        var helpBlock = $("#pNewTimestamp" + id).html("")
+                        $("#pNewTimestamp" + id).html("")
                     }
-                    else if ((valueIsBlank && timestampIsValid) || (!valueIsValid && timestampIsValid))
+                    else if ((newValueIsBlank && newTimestampIsValid) || (!newValueIsValid && newTimestampIsValid))
                     {
                         error = true
                         $("#divNewValue" + id).addClass("has-error")
-                        var helpBlock = $("#pNewValue" + id).html("Not a valid float value")
+                        $("#pNewValue" + id).html("Not a valid float value")
                         $("#divNewTimestamp" + id).removeClass("has-error")
-                        var helpBlock = $("#pNewTimestamp" + id).html("")
+                        $("#pNewTimestamp" + id).html("")
                     }
-                    else if ((valueIsBlank && !timestampIsValid) || (!valueIsValid && (timestampIsBlank || !timestampIsValid)))
+                    else if ((newValueIsBlank && !newTimestampIsValid) || (!newValueIsValid && (newTimestampIsBlank || !newTimestampIsValid)))
                     {
                         error = true
                         $("#divNewValue" + id).addClass("has-error")
-                        var helpBlock = $("#pNewValue" + id).html("Not a valid float value")
+                        $("#pNewValue" + id).html("Not a valid float value")
                         $("#divNewTimestamp" + id).addClass("has-error")
-                        var helpBlock = $("#pNewTimestamp" + id).html("This field is required.")
+                        $("#pNewTimestamp" + id).html("This field is required.")
                     }
-                    else if (valueIsValid && (timestampIsBlank || !timestampIsValid))
+                    else if (newValueIsValid && (newTimestampIsBlank || !newTimestampIsValid))
                     {
                         error = true
                         $("#divNewValue" + id).removeClass("has-error")
-                        var helpBlock = $("#pNewValue" + id).html("")
+                        $("#pNewValue" + id).html("")
                         $("#divNewTimestamp" + id).addClass("has-error")
-                        var helpBlock = $("#pNewTimestamp" + id).html("This field is required.")
+                        $("#pNewTimestamp" + id).html("This field is required.")
                     }
                     else
                     {
                         $("#divNewValue" + id).removeClass("has-error")
-                        var helpBlock = $("#pNewValue" + id).html("")
+                        $("#pNewValue" + id).html("")
                         $("#divNewTimestamp" + id).removeClass("has-error")
-                        var helpBlock = $("#pNewTimestamp" + id).html("")
+                        $("#pNewTimestamp" + id).html("")
                         var row = {}
                         row["tagId"] = id
-                        row["value"] = value
-                        row["timestamp"] = timestamp
+                        row["value"] = newValue
+                        var timestamp = moment(newTimestamp)
+                        row["timestamp"] = timestamp.utc().format("YYYY-MM-DD HH:mm:ss")
                         rows.push(row)
                     }
                 })
 
                 if (error != true)
                 {
-                    $.ajax({
+                    $.ajax(
+                    {
                         type : "POST",
                         url : "/tagValues/addMultiple",
                         data : JSON.stringify(rows)
-                    }).done(function(response) {
+                    }).done(function(response)
+                    {
                         location.reload(true)
-                    }).fail(function() {
+                    }).fail(function()
+                    {
                         $(".alert").remove()
                         $("#divFlashedMessages").append("<div class = \"alert alert-danger\"><button type = \"button\" class = \"close\" " +
                             "data-dismiss = \"alert\">&times;</button>The attempt to save one or more new element attribute values failed.</div>")                        
