--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -1,9 +1,16 @@
-.has-note {
+.has-note
+{
     background-color: #b7feb8;
 }
 
-tfoot input {
+tfoot input
+{
     width: 100%;
     padding: 3px;
     box-sizing: border-box;
+}
+
+thead input
+{
+    width: 100%;
 }
